# SLSlab

./: .gitignore  README.md  call-sls-data-generator.ps1  pyproject.toml
data/: 4locks-2chambers-14ships-sample-data.json
notebooks/: instance_generator.ipynb
schema/: commons.schema.json  input.schema.json
src/: sls-data-generator.py
src/SLSLab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/slslab/: __init__.py  configs.py  slslab.py  slslab_helpers.py
tests/: test_instance_generator.py
